Add jazmin env variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,14 +59,9 @@ services:
       MULAN_URL: 'mulan_ms'
       MULAN_PORT: '8080'
       MULAN_ENTRY: 'shares'
-      RAPUNZEL_URL: 'rapunzel_ms'
-      RAPUNZEL_PORT: '5050'
-      MOANA_URL: 'moana'
-      MOANA_PORT: '3000'
-      MOANA_ENTRY: 'feeds'
-      MERIDA_URL: 'merida'
-      MERIDA_PORT: '3002'
-      MERIDA_ENTRY: 'posts'
+      JAZMIN_URL: 'jazmin'
+      JAZMIN_PORT: '3006'
+      JAZMIN_ENTRY: 'soapservice'
       VANELLOPE_URL: 'vanellope-ms'
       VANELLOPE_PORT: '3001'
     ports:
