--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
     links:
       - eagleun-ldap
   walt:
-    image: eagleun/walt
+    image: eagleun/walt:latest
     environment:
       PORT: "5000"
       SHOW_URLS: 'true'
@@ -72,16 +72,18 @@ services:
       MERIDA_URL: 'merida'
       MERIDA_PORT: '3002'
       MERIDA_ENTRY: 'posts'
+    
     ports:
       - "5000:5000"
   eagleun-proxy:
-    image: eagleun/rev_proxy
+    image: eagleun/rev_proxy:latest
     depends_on:
       - walt
     ports:
       - "8081:80"
+    
   mulan-ms:
-    image: eagleun/mulan_ms
+    image: eagleun/mulan_ms:latest
     environment:
       DB_HOST: 'mulan-db'
       DB_PORT: '3306'
@@ -92,8 +94,9 @@ services:
       - mulan-db
     ports:
       - "8080:8080"
+    
   mulan-db:
-    image: mysql
+    image: mysql:5.7
     environment:
         MYSQL_DATABASE: 'mulan-db'
         MYSQL_USER: 'user'
@@ -104,10 +107,11 @@ services:
     volumes:
       - my-db:/var/lib/mysql
   rapunzel-ms:
-    image: eagleun/rapunzel_ms
+    image: eagleun/rapunzel_ms:latest
     command: python -u app.py
     links:
       - rapunzel-db
+    
     ports:
       - "5050:5050"
   rapunzel-db:
@@ -115,7 +119,8 @@ services:
     ports:
       - "27017"
   ana-ms:
-    image: eagleun/ana_ms
+    image: eagleun/ana_ms:latest
+    
     ports:
       - "9090:9090"
   mongo:
@@ -123,7 +128,7 @@ services:
     ports:
       - '27017'
   merida:
-    image: eagleun/merida_ms
+    image: eagleun/merida_ms:latest
     environment:
       - MONGO_DB_URL=mongodb://mongo:27017/merida
       - WAIT_HOSTS= mongo:27017
@@ -131,6 +136,7 @@ services:
       - mongo
     depends_on:
       - mongo
+    
     ports:
       - "3002:3002"
   postgres:
@@ -138,10 +144,11 @@ services:
     environment:
       - POSTGRES_USER=moana
       - POSTGRES_PASSWORD=yiuPh9eipiu2la9ie8gaifee
+    
     ports:
     - '5432'
   moana:
-    image: eagleun/moana_ms
+    image: eagleun/moana_ms:latest
     environment:
       - DB_HOST=postgres
       - DB_USERNAME=moana
@@ -152,6 +159,7 @@ services:
       - postgres
     depends_on:
       - postgres
+    
     ports:
       - "3000:3000"
   vanellope-db:
@@ -166,7 +174,7 @@ services:
       - 'vanellope-data:/var/lib/postgresql/data'
 
   vanellope-ms:
-    image: eagleun/vanellope_ms
+    image: eagleun/vanellope_ms:latest
     #normal execution without modification about database
     command: bash -c "gem uninstall bundler && gem update bundler && bundler update --bundler && bundler install && rails db:migrate && rails s -p 3001 -b '0.0.0.0'"
     #normal execution with restart database without seeds
@@ -175,16 +183,22 @@ services:
     #command: bash -c "gem uninstall bundler && gem update bundler && bundler update --bundler && bundler install && rails db:drop && rails db:create && rails db:migrate && rails db:seed && rails s -p 3001 -b '0.0.0.0'"
     depends_on:
       - vanellope-db
+    
     ports:
       - "3001:3001"
   jazmin:
-    image: eagleun/jasmiz_ms
+    image: eagleun/jasmiz_ms:latest
+    
     ports:
       - '3006:3006'
   web-app:
-    image: eagleun/web_app
+    image: eagleun/web_app:latest
+    
     ports:
       -  '3080:80'
+    environment:
+      - PROXY_URL=35.232.95.82
+      - PROXU_PORT=8081
 
   
 volumes:
